Fix hide scrollbar in safari

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
 
 body::-webkit-scrollbar {
     display: none;
+    -webkit-appearance: none;
 }
 
 h1 {
